# BetterNCM-Installer

./: .gitignore  Cargo.toml  README.md  build.rs  latest_releases.json
.cargo/: config.toml
.github/workflows/: rust.yml
scl-gui-animation/: Cargo.toml  README.md
scl-gui-animation/src/: lib.rs  spring.rs  tween.rs
scl-gui-widgets/: Cargo.toml  README.md
scl-gui-widgets/examples/: widget_test.rs
scl-gui-widgets/src/: lib.rs  widget_ext.rs
scl-gui-widgets/src/theme/: color.rs  icons.rs  mod.rs
scl-gui-widgets/src/utils/: color.rs  mod.rs
scl-gui-widgets/src/widgets/: autofocus.rs  button.rs  common.rs  create_item.rs  download_module_item.rs  dynimage.rs  folder.rs  icon.rs  icon_button.rs  label.rs  large_list_item.rs  list_item.rs  list_select.rs  menu_item.rs  mod.rs  navigation_control.rs  on_change.rs  on_cmd.rs  on_notify.rs  page_switcher.rs  password.rs  press_key.rs  progress.rs  progress_overlay.rs  radio.rs  show_if.rs  slider.rs  start_button.rs  store.rs  template.rs  toggle_switch.rs  window.rs
scl-macro/: Cargo.toml  README.md
scl-macro/src/: icons.rs  lib.rs
src/: main.rs  ncm_utils.rs
src/localdata/: localdata_noproxy  localdata_proxied
