[package]
name = "betterncm_installer"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = [
    "im",
    "serde",
    "raw-win-handle",
] }
futures = "0.3"
reqwest = { version = "*", features = ["stream"] }
tokio = { version = "*", features = ["full"] }
scl-gui-widgets = { path = "./scl-gui-widgets" }
serde_json = "1.0.79"
futures-util = "0.3.14"
winreg = "0.10.1"
anyhow = "*"
pelite = "0.10.0"
winapi = "*"
semver = "1.0.16"
dirs = "*"
